manifests/mediawiki-kafka-ingester/page-create-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-kafka-ingester-page-create
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mediawiki-kafka-ingester-page-create
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mediawiki-kafka-ingester-page-create
    spec:
      containers:
      - name: mediawiki-kafka-ingester-page-create
        image: ghcr.io/ssup2-playground/k8s-data-platform_mediawiki-kafka-ingester:0.2.1
        args: ["src/page_create_app.py"]
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
